fixed button alignment issue using flex:1

--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,7 @@ nav h1 a {
  /* width:100%; DEZE MOET ELDERS (CONTAINER ELEMENT!!) */
 }
 #restaurants-list li {
-  
+   
     background-color: #fff;
     border: 2px solid #ccc;
     font-family: Arial,sans-serif;
@@ -171,7 +171,9 @@ nav h1 a {
     padding: 10px 30px 25px;
     text-align: left;
     width: 90%;
-
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
 
 #restaurants-list .restaurant-img {
@@ -181,6 +183,8 @@ nav h1 a {
   max-width: 100%;
   /*min-height: 248px;*/
   min-width: 100%;
+justify-content: center;
+
 
 }
 
@@ -194,10 +198,14 @@ nav h1 a {
   margin: 20px 0 10px;
   text-transform: uppercase;
    /* min-height: 3em;  NIET OPTIMAAL, WAT ALS HOOGTE MEER IS DAN 3 LIJNTJES? */
+   justify-content: center;
+   flex:1;
 }
 #restaurants-list p {
   margin: 0;
   font-size: 1em;
+  justify-content: center;
+ 
 
 }
 #restaurants-list li a {
@@ -211,7 +219,8 @@ nav h1 a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-
+  justify-content: center;
+  
 }
 
 /* ====================== Restaurant Details ====================== */
